--- a/src/app/ui/components/cart/cart.component.scss
+++ b/src/app/ui/components/cart/cart.component.scss
@@ -56,6 +56,10 @@ $widescreen: 1400px;
   display: flex;
   flex-direction: column;
 
+  @media screen and (max-width: 991px) {
+    height: 92%;
+  }
+
   @include respond-to(mobile) {
     width: 90%;
   }
@@ -122,7 +126,7 @@ $widescreen: 1400px;
     //padding: 16px;
 
     @include respond-to(tablet) {
-      padding: 20px;
+      padding: 10px;
     }
 
     .empty-cart-message {
@@ -149,8 +153,8 @@ $widescreen: 1400px;
 
     .cart-item {
       display: flex;
-      gap: 12px;
-      padding: 10px;
+      gap: 8px;
+      padding: 8px;
       background: white;
       border-radius: 12px;
       margin-bottom: 16px;
@@ -158,8 +162,8 @@ $widescreen: 1400px;
       transition: all 0.2s ease;
 
       @include respond-to(tablet) {
-        gap: 16px;
-        padding: 10px;
+        gap: 8px;
+        padding: 8px;
       }
 
       &:hover {
@@ -193,7 +197,7 @@ $widescreen: 1400px;
       .cart-item-main {
         display: flex;
         flex: 1;
-        flex-direction: column;
+        flex-direction: row;
         align-items: center;
         gap: 16px;
 
@@ -203,17 +207,18 @@ $widescreen: 1400px;
         }
 
         .cart-item-image {
-          width: 100%;
-          height: 160px;
-
+          width: 100px; // Default mobile size
+          height: 100px;
+          
           @include respond-to(tablet) {
-            width: 100px;
-            height: 100px;
+            width: 110px; // Larger size for tablet and up
+            height: 110px;
           }
-
+         
           border-radius: 8px;
           overflow: hidden;
           background: #f8f8f8;
+         
 
           img {
             width: 100%;
@@ -224,9 +229,6 @@ $widescreen: 1400px;
             &:hover {
               transform: scale(1.05);
             }
-          }
-          @media screen {
-            
           }
         }
 
@@ -324,7 +326,7 @@ $widescreen: 1400px;
               flex-direction: column;
               grid-template-columns: auto 1fr;
               //gap: 8px;
-              min-width: 182px;
+              width: 160px;
 
               @include respond-to(tablet) {
                 min-width: 182px;
@@ -369,7 +371,7 @@ $widescreen: 1400px;
               align-items: center;
               padding: 0 0 0 10px;
               //gap: 12px;
-              justify-content: space-between;
+              justify-content: space-evenly;
 
               @include respond-to(tablet) {
                 justify-content: flex-end;
