--- a/src/app/ui/components/filter/filter.component.scss
+++ b/src/app/ui/components/filter/filter.component.scss
@@ -21,7 +21,7 @@ $link-color: #0000ee;
   @include media-breakpoint-up(md) {
     position: sticky;
     top: 20px;
-    width: 250px;
+    //width: 250px;
     max-height: calc(100vh - 40px);
   }
 }
