--- a/src/app/ui/components/home/home.component.scss
+++ b/src/app/ui/components/home/home.component.scss
@@ -341,6 +341,39 @@ body {
       padding: 20px 0;
       scroll-behavior: smooth;
 
+      @media (max-width: $breakpoint-tablet) { // 480px ve altı için
+        .category-card {
+          min-width: 135px !important; // Sabit genişlik
+          max-height: 160px !important; // Sabit yükseklik
+          
+          .category-image {
+            height: 50px; // Resim boyutunu küçült
+            margin-top: 0px;
+            margin: 0 10px 0 10px;
+             // Üst boşluğu azalt
+            
+            img {
+              width: 100%;
+              height: 100%;
+              object-fit: contain;
+            }
+          }
+
+          .category-content {
+            padding: 5px; // İç boşluğu azalt
+            
+            .category-title {
+              font-size: 0.8rem; // Yazı boyutunu küçült
+              height: auto; // Yüksekliği otomatik ayarla
+              // Üst boşluğu azalt
+              padding: 0 0 5px; // Alt boşluğu azalt
+            }
+
+            
+          }
+        }
+      }
+
       @media (max-width: $breakpoint-tablet) {
         .category-card {
           min-width: calc(50% - 10px);
@@ -356,7 +389,7 @@ body {
       @media (max-width: $breakpoint-mobile) {
         .category-card {
           min-width: 100%;
-          min-height: 200px;
+          min-height: 160px;
         }
       }
       @media (min-width: $breakpoint-tablet){
@@ -368,7 +401,7 @@ body {
       .category-card {
         cursor: pointer;
         min-width: 205px;
-        min-height: 300px; // Kartların genişliği sabit olmalı
+        //min-height: 300px; // Kartların genişliği sabit olmalı
         background-color: $home-secondary-color;
         //border-radius: 10px;
         overflow: hidden;
@@ -384,6 +417,10 @@ body {
           height: 100px;
           overflow: hidden;
 
+          @media (max-width: $breakpoint-tablet) {
+            margin: 0 10px 0 10px; // Üst boşluğu azalt
+          }
+
           img {
             width: 100%;
             height: 100%;
@@ -397,7 +434,10 @@ body {
           display: flex;
           align-items: center;
           flex-direction: column;
+          @media (max-width: $breakpoint-tablet) {
+            padding: 5px; // İç boşluğu azalt
         }
+      }
 
         .category-title {
           margin-top: 20px;
@@ -446,21 +486,6 @@ body {
 }
 
 
-
-.downbar-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 30px 60px;
-  background-image: linear-gradient(
-      to bottom,
-      rgba(12, 108, 212, 0),
-      rgba(35, 41, 50, 0.15) 37%
-    ),
-    linear-gradient(to bottom, #e53935, #e53935);
-  color: #fff;
-}
-
 .info-cards {
   padding: 50px 0;
   background-color: #f8f9fa;
@@ -475,6 +500,14 @@ body {
     display: flex;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 30px;
+    @media (max-width: 768px) {
+      margin: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 20px;
+    }
+    
   }
 
   .info-card {
@@ -565,9 +598,8 @@ body {
 }
 
 .most-liked-products {
-  margin: 2rem auto;
+  margin:  auto;
   max-width: 1420px;
-  padding-top: 2rem;
 
   h2 {
     font-size: 1.3rem;
